# deep-koopman-with-time-delays

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  reviews.txt
code/: requirements.txt
code/examples/: DMDc.ipynb  delay_LSTM.ipynb  dmdc.py  eDMDc with sqrt.ipynb  eDMDc without sqrt.ipynb  models.py  result_plots.ipynb
code/examples/data/: test_sim.pkl  train_sim.pkl  val_sim.pkl
code/examples/results/: amplitudes_eDMDc_w_sqrt.npy  amplitudes_eDMDc_wo_sqrt.npy  eig_eDMDc_w_sqrt.npy  eig_eDMDc_wo_sqrt.npy  pred_sim_eDMDc_w_sqrt.mat  (+1 more)
code/functions/: dmd.py  plot.py  preprocessing.py
code/results/: A_DeReK_noise.npy  B_DeReK_noise.npy  LSTM_8.pth  pred_sim_DeReK.mat  pred_u_sim_DKO.mat  test_lifted_states.mat
data/: test_sim.pkl  train_sim.pkl  val_sim.pkl
document/: conference_template.tex  main.bib  root.tex
examples/: delay_LSTM.ipynb  eDMDc without sqrt.ipynb  eDMDc.ipynb  models.py  result_plots.ipynb
examples/results/: A_DeReK_noise.npy  B_DeReK.npy  B_DeReK_noise.npy  DeReK.pth  DeReK_LSTM.pth  LSTM_8.pth  amplitudes_eDMDc w sqrtx.npy  amplitudes_eDMDc wo sqrtx.npy  eig_derek.npy  eig_eDMDc w sqrtx.npy  eig_eDMDc wo sqrtx.npy  eig_eDMDc_w_sqrt.npy  pred_sim_DeReK.mat  pred_sim_eDMDc_w_sqrt.mat  pred_sim_eDMDc_wo_sqrt.mat  test_pred_derek.npy  test_pred_eDMDc w sqrtx.npy  test_pred_eDMDc wo sqrtx.npy
functions/: plot.py  preprocessing.py
paper/: root.tex
results/: A_DeReK.npy
src/: dmd.py  metrics.py  plot.py  preprocessing.py  utils.py
src/datasets/: __init__.py  _base.py  models.py
