[project]
name="DeReK vs. DMD"
version = "0.1.0"
authors = ["patrik.valabek@stuba.sk", "marek.wadinger@stuba.sk"]
license = "MIT"

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--doctest-glob=README.md",
    "--verbose",
    "-ra",
    "-m not datasets and not slow",
    "--color=yes",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "NUMBER",
    "ELLIPSIS",
    "IGNORE_EXCEPTION_DETAIL",
]
norecursedirs = [".*"]

[tool.ruff]
lint.ignore = ["E501"]
lint.select = ["E", "F", "I", "UP"] # https://beta.ruff.rs/docs/rules/
line-length = 79

[tool.mypy]
ignore_missing_imports = true
